# AOC

./: .gitignore  README.md
01_day/: Cargo.toml
01_day/src/: day1.rs
09_day/src/: main.rs
11_day/: day11.py
14_day/: main.go
14_day/cave/: cave.go  sand.go
14_day/utils/: utils.go
15_day/: main.go
15_day/sensor/: sensor.go
AoC_2020/: Cargo.toml
AoC_2020/day03/: Cargo.toml
AoC_2020/day07/: Cargo.toml
AoC_2020/day11/: Cargo.toml
AoC_2020/day12/: Cargo.toml
AoC_2020/day15/: Cargo.toml
AoC_2020/day16/: Cargo.toml
AoC_2021/: 01_day.go  02_day.go  03_day.go  README.md  go.mod
AoC_2021/cmd/: day.go  root.go
AoC_2021/days/: 01_day.go  01_day_test.go  02_day.go  02_day_test.go  03_day.go  03_day_test.go  04_day.go  04_day_test.go  05_day.go  05_day_test.go  06_day.go  06_day_test.go  07_day.go  07_day_test.go  08_day.go  08_day_test.go  09_day.go  09_day_test.go  10_day.go  10_day_test.go  11_day.go  11_day_test.go  12_day.go  12_day_test.go  13_day.go  13_day_test.go  14_day.go  14_day_test.go  15_day.go  15_day_test.go  16_day.go  16_day_test.go  17_day.go  17_day_test.go  18_day.go  18_day_test.go  20_day.go  20_day_test.go  21_day.go  21_day_test.go  (+6 more)
AoC_2022/: README.md
AoC_2023/: README.md
AoC_2024/: README.md  aoc.go
AoC_2025/: .gitignore  Cargo.toml  README.md
aoc-helper/: Cargo.toml
aoc-helper/src/: cli.rs  client.rs  commands.rs  logging.rs  main.rs
aoc-helper/src/cookies/: mod.rs  model.rs  schema.rs  session.rs
aoc_2025/: Cargo.toml
day13/: go.mod  handler.go  main.go
day3/: day3.py
day5/: day5.py
(+157 files in other folders)
