[package]
name = "aoc-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
diesel = { version = "2.2.12", features = ["sqlite"] }
glob = "0.3.2"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["blocking"] }
simplelog = "0.12.2"
